Made delete option on ingredients list functional